# discord-helper-bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/bot/: config.py  db.py  discord_client.py  main.py  webhook.py
tests/: smoke.py
